# Telemetry

./: README.md  bynary_message.hpp  bynary_message.сpp  main.cpp  servers.cpp  structs.cpp  structs.hpp  test_advanced.py  test_basic.py  test_python.py  test_pyton_two.py  test_stress.py
Version №1/: binary_message.cpp  binary_server.hpp  config.hpp  data_store.hpp  http_server.hpp  main.cpp  message_parser.hpp  servers.cpp  structs.hpp  utils.hpp
Version №2/: CMakeLists.txt  binary_message.cpp  binary_message.hpp  main.cpp  servers.cpp  structs.hpp
